# obs-studio

.github/workflows/: flatpak.yml
UI/: api-interface.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main.cpp  window-basic-settings.cpp  window-basic-settings.hpp
UI/data/locale/: en-US.ini
UI/forms/: OBSBasicSettings.ui
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
docs/sphinx/: reference-libobs-graphics-graphics.rst  reference-outputs.rst
libobs-opengl/: gl-egl-common.c  gl-egl-common.h  gl-nix.c  gl-nix.h  gl-wayland-egl.c  gl-x11-egl.c  gl-x11-glx.c
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
plugins/: CMakeLists.txt
plugins/linux-capture/: pipewire.c
plugins/linux-pipewire/: CMakeLists.txt  dbus-requests.c  dbus-requests.h  linux-pipewire.c  loadhelper.c  loadhelper.h  pipewire-camera.c  pipewire-capture.c  pipewire-common.c  pipewire-common.h  pipewire-input.c  pipewire-input.h  pipewire-portal-camera.c  pipewire-portal-camera.h  pipewire-portal-screencast.c  pipewire-portal-screencast.h  pipewire-portal.c  pipewire-portal.h  pipewire-virtualcam.c  pipewire-virtualcam.h  pipewire-webcam.c  pipewire-webcam.h  pipewire.c  pipewire.h  portal.c  portal.h  utils.c  utils.h
plugins/linux-pipewire/data/locale/: ar-SA.ini  bn-BD.ini  el-GR.ini  en-US.ini  eu-ES.ini  fi-FI.ini  fil-PH.ini  gd-GB.ini  he-IL.ini  hu-HU.ini  it-IT.ini  ko-KR.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sv-SE.ini  uk-UA.ini  zh-CN.ini
plugins/linux-v4l2/: linux-v4l2.c  v4l2-output.c
plugins/mac-virtualcam/src/obs-plugin/: plugin-main.mm
plugins/win-dshow/: dshow-plugin.cpp  virtualcam.c
