project(linux-pipewire)

option(ENABLE_PIPEWIRE "Enable PipeWire support" ON)
if(NOT ENABLE_PIPEWIRE)
	message(STATUS "PipeWire support disabled, linux-pipewire plugin disabled")
	return()
endif()

find_package(PipeWire QUIET)
find_package(Libdrm QUIET) # we require libdrm/drm_fourcc.h to build
find_package(Gio QUIET)

if(NOT PIPEWIRE_FOUND)
	message(FATAL_ERROR "PipeWire library not found! Please install PipeWire or set ENABLE_PIPEWIRE=OFF")
elseif(NOT GIO_FOUND)
	message(FATAL_ERROR "Gio library not found! Please install GLib2 (or Gio) or set ENABLE_PIPEWIRE=OFF")
elseif(NOT LIBDRM_INCLUDE_DIRS)
	message(FATAL_ERROR "libdrm headers not found! Please install libdrm or set ENABLE_PIPEWIRE=OFF")
endif()

add_definitions(-DENABLE_PIPEWIRE)

set(linux-pipewire_INCLUDES
	"${CMAKE_SOURCE_DIR}/libobs"
	${GIO_INCLUDE_DIRS}
	${PIPEWIRE_INCLUDE_DIRS}
)

add_definitions(
	${GIO_DEFINITIONS}
	${PIPEWIRE_DEFINITIONS}
)

set(linux-pipewire_SOURCES
	linux-pipewire.c
	pipewire-virtualcam.c
	pipewire-common.c
	pipewire-input.c
	pipewire-capture.c
	pipewire-camera.c
	pipewire-portal-screencast.c
	pipewire-portal-camera.c
	pipewire-portal.c
	portal.c
	dbus-requests.c
)
set(linux-pipewire_HEADERS
	pipewire-virtualcam.h
	pipewire-common.h
	pipewire-input.h
	pipewire-capture.h
	pipewire-camera.h
	pipewire-portal-screencast.h
	pipewire-portal-camera.h
	pipewire-portal.h
	portal.h
	dbus-requests.h
)

set(linux-pipewire_LIBRARIES
	libobs
	glad
	${GIO_LIBRARIES}
	${PIPEWIRE_LIBRARIES}
)

include_directories(SYSTEM
	${linux-pipewire_INCLUDES}
)
add_library(linux-pipewire MODULE
	${linux-pipewire_SOURCES}
	${linux-pipewire_HEADERS}
)
target_link_libraries(linux-pipewire
	${linux-pipewire_LIBRARIES}
)

set_target_properties(linux-pipewire PROPERTIES FOLDER "plugins")

install_obs_plugin_with_data(linux-pipewire data)
